ATLAS-291: Weitere Überlegungen zum Error handling